--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -11,15 +11,39 @@
   <h3>People</h3>
   <p>Here are some of my favorite people!</p>
   <ul>
-    <li>My brother Christopher</li>
-    <li>My mom and dad:
+    <a href="http://www.example.com/christopher.html">
+      <li>My brother Christopher</li>
+      <img src="img/christopher.jpeg" alt="A photo of Christopher.">
+    </a>
+    <li>
+      My mom and dad:
       <ul>
-        <li>Steve</li>
-        <li>Carol</li>
+        <li>
+          <a href="http://www.example.com/steve.html">
+            <strong>Steve</strong>
+            <img src="img/steve.jpeg" alt="A photo of Steve.">
+          </a>
+        </li>
+        <li>
+          <a href="http://www.example.com/carol.html">
+            <strong>Carol</strong>
+            <img src="img/carol.jpeg" alt="A photo of Carol.">
+          </a>
+        </li>
       </ul>
     </li>
-    <li>My friend Joe</li>
-    <li>My friend Candy</li>
+    <li>
+      <a href="http://www.example.com/jessica.html">
+        My friend <strong>Jessica</strong>
+        <img src="img/jessica.jpeg" alt="A photo of Jessica.">
+      </a>
+    </li>
+    <li>
+      <a href="http://www.example.com/candy.html">
+        My friend <strong>Candy</strong>
+        <img src="img/candy.jpeg" alt="A photo of Candy.">
+      </a>
+    </li>
   </ul>
   <h3>Flavors of ice cream</h3>
   <p>These are my three favorites, in order:</p>
