--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -8,6 +7,9 @@
 <body>
   <h1>My favoite things</h1>
   <h2>These are a few of my favorite things.</h2>
+
+  <a href="my-first-webpage.html">My First webpage</a>
+
   <h3>People</h3>
   <p>Here are some of my favorite people!</p>
   <ul>
@@ -41,7 +43,7 @@
     <li>
       <a href="http://www.example.com/candy.html">
         My friend <strong>Candy</strong>
-        <img src="img/candy.jpeg" alt="A photo of Candy.">
+        <img src="images/candy.jpg" alt="A photo of Candy.">
       </a>
     </li>
   </ul>
@@ -49,6 +51,7 @@
   <p>These are my three favorites, in order:</p>
   <ol>
     <li>Pistachio</li>
+    <img src="images/s_p.jpg" alt="shelled Pistachio">
     <li>Salted Caramel</li>
     <li>Mint Chocolate Chip</li>
   </ol>
