--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Web Page #1!</title>
-  </head>
-  <body>
-    <h1>My first web page!<h1>
-      <h2>Written with the guidance of Epicodus</h2>
+<head>
+  <meta charset="utf-8">
+  <title>Web Page #1!</title>
+</head>
+<body>
+  <h1>My first web page!<h1>
+    <h2>Written with the guidance of Epicodus</h2>
 
-      <p>Thisis my first web page!</p>
-      <p>Isn't it nice?</p>
+    <a href="favorite-things.html">Favorite things</a>
 
-      <p>Here are some things I'm going to learn about coding:</p>
-      <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>And a lot more!</li>
-      </ol>
+    <p>Thisis my first web page!</p>
+    <p>Isn't it nice?</p>
+
+    <p>Here are some things I'm going to learn about coding:</p>
+    <ol>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more!</li>
+    </ol>
   </body>
-</html>
+  </html>
