add background image

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
   <title>Eva's favorite things</title>
 </head>
@@ -23,7 +24,7 @@
         <li>
           <a href="http://www.example.com/steve.html">
             <strong>Steve</strong>
-            <img src="img/steve.jpeg" alt="A photo of Steve.">
+            <img src="images/northern.jpeg" alt="A photo of Steve.">
           </a>
         </li>
         <li>
