--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
+ <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
   <title>Web Page #1!</title>
-</head>
-<body>
+ </head>
+ <body>
   <h1>My first web page!<h1>
     <h2>Written with the guidance of Epicodus</h2>
 
@@ -21,4 +22,4 @@
       <li>And a lot more!</li>
     </ol>
   </body>
-  </html>
+</html>
