--- a/favorite-things.html
+++ b/favorite-things.html
@@ -6,7 +6,7 @@
   <title>Eva's favorite things</title>
 </head>
 <body>
-  <h1>My favoite things</h1>
+  <h1 class=best>My favoite things</h1>
   <h2>These are a few of my favorite things.</h2>
 
   <a href="my-first-webpage.html">My First webpage</a>
@@ -53,8 +53,9 @@
   <ol>
     <li>Pistachio</li>
     <img src="images/s_p.jpg" alt="shelled Pistachio">
-    <li>Salted Caramel</li>
+    <a href="nextpage.HTML"><li>Salted Caramel</li></a>
     <li>Mint Chocolate Chip</li>
+    <img src="images/mint-chip.jpg" alt="mint chip ice cream">
   </ol>
   <p>Thanks for reading about me!</p>
 </body>
